test/Fail/InvalidFieldModality.agda
{-# OPTIONS --cohesion #-}
open import Agda.Builtin.Nat

record Foo : Set where
  field
    @♭ foo : Nat
